# pycsa

./: .buildinfo  .gitignore  .zenodo.json  CHANGELOG.rst  CITATION.cff  README.md  api.html  changelog.html  genindex.html  hpc_reproducibility.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quick_start.html  refs.html  requirements.txt  search.html  searchindex.js  setup_paths.sh  showcase.html  tutorial.html
.doctrees/: api.doctree  changelog.doctree  hpc_reproducibility.doctree  index.doctree  quick_start.doctree  refs.doctree  showcase.doctree  tutorial.doctree
.doctrees/_autosummary/: pycsa.compute.context.doctree  pycsa.compute.doctree  pycsa.config.doctree  pycsa.config.params.doctree  pycsa.core.buffer_pool.doctree  pycsa.core.delaunay.doctree  pycsa.core.doctree  pycsa.core.fourier.doctree  pycsa.core.hyperparams.doctree  pycsa.core.io.doctree  pycsa.core.lin_reg.doctree  pycsa.core.mode_selection.doctree  pycsa.core.physics.doctree  pycsa.core.priors.doctree  pycsa.core.reconstruction.doctree  pycsa.core.tile_cache.doctree  pycsa.core.utils.doctree  pycsa.core.validation.doctree  pycsa.core.var.doctree  pycsa.data.cell.doctree  pycsa.data.doctree  pycsa.data.results.doctree  pycsa.doctree  pycsa.logging_config.doctree  pycsa.plotting.cart_plot.doctree  pycsa.plotting.diagnostics.doctree  pycsa.plotting.doctree  pycsa.plotting.plotter.doctree  pycsa.scheduling.doctree  pycsa.wrappers.diagnostics.doctree  pycsa.wrappers.doctree  pycsa.wrappers.interface.doctree
.github/workflows/: ci.yml  publish.yml
_autosummary/: pycsa.compute.context.html  pycsa.compute.html  pycsa.config.html  pycsa.config.params.html  pycsa.core.buffer_pool.html  pycsa.core.delaunay.html  pycsa.core.fourier.html  pycsa.core.html  pycsa.core.hyperparams.html  pycsa.core.io.html  pycsa.core.lin_reg.html  pycsa.core.mode_selection.html  pycsa.core.physics.html  pycsa.core.priors.html  pycsa.core.reconstruction.html  pycsa.core.tile_cache.html  pycsa.core.utils.html  pycsa.core.validation.html  pycsa.core.var.html  pycsa.data.cell.html  pycsa.data.html  pycsa.data.results.html  pycsa.html  pycsa.logging_config.html  pycsa.plotting.cart_plot.html  pycsa.plotting.diagnostics.html  pycsa.plotting.html  pycsa.plotting.plotter.html  pycsa.scheduling.html  pycsa.wrappers.diagnostics.html  pycsa.wrappers.html  pycsa.wrappers.interface.html
_sources/: api.rst.txt  changelog.rst.txt  hpc_reproducibility.rst.txt  index.rst.txt  quick_start.rst.txt  showcase.rst.txt  tutorial.rst.txt
_sources/_autosummary/: pycsa.compute.context.rst.txt  pycsa.compute.rst.txt  pycsa.config.params.rst.txt  pycsa.config.rst.txt  pycsa.core.buffer_pool.rst.txt  pycsa.core.delaunay.rst.txt  pycsa.core.fourier.rst.txt  pycsa.core.hyperparams.rst.txt  pycsa.core.io.rst.txt  pycsa.core.lin_reg.rst.txt  pycsa.core.mode_selection.rst.txt  pycsa.core.physics.rst.txt  pycsa.core.priors.rst.txt  pycsa.core.reconstruction.rst.txt  pycsa.core.rst.txt  pycsa.core.tile_cache.rst.txt  pycsa.core.utils.rst.txt  pycsa.core.validation.rst.txt  pycsa.core.var.rst.txt  pycsa.data.cell.rst.txt  pycsa.data.results.rst.txt  pycsa.data.rst.txt  pycsa.logging_config.rst.txt  pycsa.plotting.cart_plot.rst.txt  pycsa.plotting.diagnostics.rst.txt  pycsa.plotting.plotter.rst.txt  pycsa.plotting.rst.txt  pycsa.rst.txt  pycsa.scheduling.rst.txt  pycsa.wrappers.diagnostics.rst.txt  pycsa.wrappers.interface.rst.txt  pycsa.wrappers.rst.txt
changelog.d/: 31.added.rst  33.added.rst  34.changed.rst  35.changed.rst  36.changed.rst  41.added.rst  42.added.rst  43.changed.rst  44.added.rst  45.changed.rst  46.changed.rst  47.added.rst  48.fixed.rst
docs/source/: conf.py  hpc_reproducibility.rst  index.rst  quick_start.rst  refs.rst  tutorial.rst
examples/: etopo_loader_example.py  icon_etopo_andes.py  icon_regional_minimal.py
inputs/: icon_global_run.py  icon_regional_run.py  lam_run.py  local_paths.py  local_paths_example.py  selected_run.py
inputs/archive/: debug_run.py  iter_solve.py  lam_alaska_pmf_selector.py  selected_run.py
notebooks/: prepare_orog.ipynb
pycsa/: __init__.py  cli.py  local_paths.py.template  logging_config.py  scheduling.py
pycsa/compute/: __init__.py  context.py
pycsa/config/: __init__.py  params.py
pycsa/core/: __init__.py  buffer_pool.py  delaunay.py  fourier.py  hyperparams.py  io.py  lin_reg.py  mode_selection.py  (+7 more)
runs/: .icon_merit_global.py.swo  chunk_consolidator.py  delaunay_runs.py  icon_etopo_global.py  icon_merit_global.py  icon_merit_regional.py  icon_usgs_test.py  idealised_delaunay.py  idealised_isosceles.py  merge_netcdf_chunks.py  submit_etopo_global.sh  tapering_test.py  validate_chunks.py
scripts/: check_etopo_sizes.sh  check_slurm_resources.py  compare_baseline_vs_new_defaults.py  diagnose_netcdf_issue.sh  download_etopo_with_validation.sh  merge_icon_etopo_outputs.py  plot_pacific_detail.py  plot_verification_improved.py  validate_cells_of_interest.py  validate_hyperparam_defaults.py  verify_icon_etopo_land_ocean.py
src/: delaunay.py  io.py  utils.py  var.py
tests/: conftest.py  test_centered_projection.py  test_dynamic_memory.py  test_etopo_edge_cases.py  test_etopo_global_plot.py  test_etopo_parallel_benchmark.py  test_etopo_plot.py  test_etopo_pole_cells.py  test_etopo_single_cell_debug.py  test_hyperparams.py  test_icon_etopo_validation.py  test_merit_edge_cases.py  test_mode_selection.py  test_priors.py  test_spatial_cv.py  test_tile_cache_etopo_equivalence.py
vis/: cart_plot.py  plotter.py
wrappers/: diagnostics.py  interface.py
(+60 files in other folders)
