[project]
name = "pyCSAM"
version = "0.95.1"

dependencies = [
    "Cartopy==0.21.1",
    "h5py==3.9.0",
    "ipython==8.12.3",
    "matplotlib==3.7.2",
    "netCDF4==1.6.5",
    "noise==1.2.2",
    "numba==0.57.1",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit_learn==1.3.0",
    "scipy==1.12.0",
]

# Packaging
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"pycsam" = ""}


[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.rst"
underlines = ["-", "^"]

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true