[project]
name = "pyCSA"
version = "0.95.1"

dependencies = [
    "Cartopy==0.21.1",
    "h5py==3.9.0",
    "ipython==8.12.3",
    "matplotlib==3.7.2",
    "netCDF4==1.6.5",
    "noise==1.2.2",
    "numba==0.57.1",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit_learn==1.3.0",
    "scipy==1.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

# Packaging
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycsa*"]


[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.rst"
underlines = ["-", "^"]

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: integration tests (run full pipelines)",
    "unit: unit tests (fast, isolated tests)",
    "slow: slow tests (mark tests that take >10s)",
]