[project]
name = "pyCSA"
version = "0.95.1"
description = "Python package for spectral approximation methods applied to topographic analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Ray Chew", email = "chew@caltech.edu" },
]
maintainers = [
    { name = "Ray Chew", email = "chew@caltech.edu" },
]
keywords = [
    "spectral approximation",
    "constrained spectral approximation",
    "topography",
    "subgrid orography",
    "ICON",
    "ETOPO",
    "MERIT",
    "gravity waves",
    "atmospheric science",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "Cartopy==0.25.0",
    "dask[distributed]",
    "h5py==3.15.1",
    "matplotlib==3.10.7",
    "netCDF4==1.7.3",
    "noise==1.2.2",
    "numba==0.62.1",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "scipy==1.15.3",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ray-chew/pyCSA"
Documentation = "https://ray-chew.github.io/pyCSA"
Repository = "https://github.com/ray-chew/pyCSA"
Issues = "https://github.com/ray-chew/pyCSA/issues"

# Packaging
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycsa*"]


[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.rst"
underlines = ["-", "^"]

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: integration tests (run full pipelines)",
    "unit: unit tests (fast, isolated tests)",
    "slow: slow tests (mark tests that take >10s)",
]